fix a tag target

--- a/learn/templates/expression/e3_practice.html
+++ b/learn/templates/expression/e3_practice.html
@@ -40,7 +40,7 @@
             <div id="text-box">
                 <h4> 문제 2 ) </h4>
                 <p> 위 알고리즘 표현 방법 중 주어진 문제를 표현하기에 가장 적절하다고 생각하는 방법은 무엇인지 고르고, 그 이유를 얘기해 봅시다.</p>
-                <a href="govote.at" class="btn btn-lg btn-outline-info" role="button"> 문제 풀러 가기 </a>
+                <a href="https://www.menti.com" target="_blank" class="btn btn-lg btn-outline-info" role="button"> 문제 풀러 가기 </a>
             </div>
             <div id="text-box">
                 <h6>.</h6>
