--- a/learn/templates/understand/u1_definition.html
+++ b/learn/templates/understand/u1_definition.html
@@ -67,7 +67,7 @@
             <div id="media-box">
                 <div class="media">
                     <div class="media-left">
-                        <a href="https://youtu.be/_dyNIRXbm-s">
+                        <a href="https://youtu.be/_dyNIRXbm-s" target="_blank">
                             <img class="media-object" src="{% static 'img/youtube_icon.png' %}" height="65" width="65" alt="더 알아보기">
                         </a>
                     </div>
