--- a/learn/templates/learn/home.html
+++ b/learn/templates/learn/home.html
@@ -39,13 +39,18 @@
 
             <!-- in case of media contents, use id="media-box" -->
             <div id="media-box">
+
+                <div class="youtubeWrap">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/GrsqZSDMKO4" frameborder="0"
                         gesture="media" allow="encrypted-media" allowfullscreen></iframe>
             </div>
 
+
+            </div>
+
             <div id="text-box">
-                <p> 내가 만드는 게 저것보단 낫겠다구요? 그렇다면 -->
-                <a href="{% url 'group_activity' %}" target="_blank">샌드위치 만들러 가기 </a>
+                <p> 내가 만드는 게 저것보단 낫겠다구요? 그렇다면 ->
+                    <a href="{% url 'group_activity' %}" target="_blank"><strong>샌드위치 만들러 가기</strong> </a>
                 </p>
             </div>
 
